# monitoring-proto-lib

./: Makefile  buf.gen.yaml  buf.yaml  go.mod  go.sum  pyproject.toml  requirements.txt
monitoring/v1/: delete.proto  deploy.proto
proto/monitoring/v1/: monitoring.proto
proto/monitoring_proto_lib/monitoring/v1/: deploy.proto  monitoring.proto
tests/: proto.py
