[tool.poetry]
name = "monitoring-proto-lib"
version = "0.0.1"
description = "Protobuf definitions for monitoring messages between Oakestra and Processor"
authors = ["Simon Zelenski <simon.zelenski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
grpcio = "^1.54.0"
protobuf = "^4.22.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
