[tool.poetry]
name = "monitoring-proto-lib"
version = "0.0.7"
description = "Protobuf definitions for monitoring messages between Oakestra and Processor"
authors = ["Simon Zelenski <simon.zelenski@gmail.com>"]
packages = [
    {include = "monitoring_proto_lib/monitoring/v1", from = "gen/python"}
]

[tool.poetry.dependencies]
python = "^3.8"
grpcio = "^1.54.0"
protobuf = "^4.22.1"

[build-system]
requires = [
    "poetry-core>=1.0.0",
    "setuptools>=42",
    "wheel"
]
build-backend = "poetry.core.masonry.api"
