[tool.poetry]
name = "monitoring-proto-lib"
version = "0.0.10"
description = "Protobuf definitions for monitoring messages between Oakestra and Processor"
authors = ["Simon Zelenski <simon.zelenski@gmail.com>"]
packages = [
    {include = "monitoring_proto_lib", from = "gen/python"}
]

[tool.poetry.dependencies]
python = "^3.8"
grpcio = "~1.60.0"
protobuf = "~4.25.2"

[build-system]
requires = [
    "poetry-core>=1.0.0",
    "setuptools>=42",
    "wheel"
]
build-backend = "poetry.core.masonry.api"
